# CAD-to-ROS

./: .travis.yml  .travis_ppa_oce.sh  CAD-to-ROS.files  CAD-to-ROS.includes  Objectives.md  README.md
build-industrial_robot_builder-Desktop-Debug/: Makefile  industrial_robot_builder  moc_industrial_robot_builder.cpp  ui_industrial_robot_builder.h
doc/meetings/: 20160222 CAD to ROS Meeting Slides.pptx
industrial_robot_builder/: industrial_robot_builder.cpp  industrial_robot_builder.h  industrial_robot_builder.pro  industrial_robot_builder.ui  main.cpp
qt_property_browser/: CMakeLists.txt  package.xml
qt_property_browser/cmake/: qt_property_browser-extras.cmake.em
qt_property_browser/src/: qtpropertymanager.cpp  qtpropertymanager.h  qtvariantproperty.cpp
test_models/: CMakeLists.txt  package.xml
test_models/jaco/: standalone_arm.urdf
test_models/pr2/: pr2.urdf
test_models/ur/: ur5.urdf
urdf_editor/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  qtpropertybrowser.pri  urdf_editor.pro
urdf_editor/include/urdf_editor/: base_property.h  common.h  industrial_robot_builder.ui  joint_axis_property.h  joint_calibration_property.h  joint_dynamics_property.h  joint_limits_property.h  joint_mimic_property.h  joint_property.h  joint_safety_property.h  joint_tree_property.h  link_collision_property.h  link_geometry_property.h  link_inertial_property.h  link_new_material_property.h  link_property.h  link_tree_property.h  link_visual_property.h  my_rviz.h  origin_property.h  property_types.h  qt_file_browser.h  qt_types.h  urdf_editor.h  urdf_property.h  urdf_property_tree.h  urdf_property_tree_joint_item.h  urdf_property_tree_link_item.h  urdf_transforms.h  urdf_types.h  urdf_types_ext.h
urdf_editor/include/urdf_editor/assimp/: byte_swapper.h  default_io_stream.h  exceptional.h  stl_exporter.h
urdf_editor/include/urdf_editor/qtpropertybrowser/: qtvariantproperty.h
urdf_editor/include/urdf_editor/utils/: convex_hull_generator.h
urdf_editor/launch/: start.launch
urdf_editor/resources/: icons.qrc
urdf_editor/src/: common.cpp  joint_axis_property.cpp  joint_calibration_property.cpp  joint_dynamics_property.cpp  joint_limits_property.cpp  joint_mimic_property.cpp  joint_property.cpp  joint_property.cpp.orig  joint_safety_property.cpp  joint_tree_property.cpp  link_collision_property.cpp  link_geometry_property.cpp  link_inertial_property.cpp  link_new_material_property.cpp  link_property.cpp  link_tree_property.cpp  link_visual_property.cpp  main.cpp  my_rviz.cpp  origin_property.cpp  qt_file_browser.cpp  urdf_editor.cpp  urdf_property.cpp  urdf_property_tree.cpp  urdf_property_tree_joint_item.cpp  urdf_property_tree_link_item.cpp  urdf_transforms.cpp
urdf_editor/src/assimp/: default_io_stream.cpp  stl_exporter.cpp
urdf_editor/src/codecs/: step_to_stl.cpp  step_to_stl.h
urdf_editor/src/qtpropertybrowser/: qtbuttonpropertybrowser.cpp  qteditorfactory.cpp  qtgroupboxpropertybrowser.cpp  qtpropertybrowser.cpp  qtpropertybrowserutils.cpp  qtpropertymanager.cpp  qttreepropertybrowser.cpp  qtvariantproperty.cpp
urdf_editor/src/utils/: convex_hull_generator.cpp
urdf_editor/ui/: industrial_robot_builder.ui
