<package>
  <name>urdf_builder</name>
  <version>0.0.1</version>
  <description>
     This is an editor for creating and modifying urdf files.
  </description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>BSD</license>

  <url></url>
  <author>Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>qt_property_browser</build_depend>
  <build_depend>assimp</build_depend>
  <build_depend>moveit_ros_visualization</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>assimp</run_depend>
  <run_depend>qt_property_browser</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
